--- a/Are.na Extension/Info.plist
+++ b/Are.na Extension/Info.plist
@@ -55,6 +55,6 @@
 	<key>NSHumanReadableCopyright</key>
 	<string>Copyright © 2019 Joshua Söhn. All rights reserved.</string>
 	<key>NSHumanReadableDescription</key>
-	<string>This is a Safari Extension. You should tell us what your extension does here.</string>
+	<string>Add images and websites to Are.na</string>
 </dict>
 </plist>
